force-app/main/default/objects/MailchimpSyncStatus__c/MailchimpSyncStatus__c.object-meta.xml
<CustomObject>
    <description>Tracks the sync status for individual contacts.</description>
    <label>Mailchimp Sync Status</label>
    <nameField>
        <label>Mailchimp Sync Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Sync Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>