force-app/main/default/objects/MailchimpSyncStatus__c/fields/BatchID__c.field-meta.xml
<CustomField>
    <fullName>BatchID__c</fullName>
    <description>The ID of a pending Mailchimp batch operation that affects this contact.</description>
    <externalId>true</externalId>
    <label>Mailchimp Batch Operation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>