force-app/main/default/objects/MailchimpSyncStatus__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mailchimp Sync Statuses</relationshipLabel>
    <relationshipName>Mailchimp_Sync_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>