force-app/main/default/objects/MailchimpSyncStatus__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The contact&#39;s e-mail address, used internally by the sync process.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>