force-app/main/default/objects/MailchimpSyncStatus__c/fields/LastChanged__c.field-meta.xml
<CustomField>
    <fullName>LastChanged__c</fullName>
    <description>Date and time the list member corresponding to this contact was updated in Mailchimp.</description>
    <label>Last changed in Mailchimp</label>
    <type>DateTime</type>
</CustomField>