force-app/main/default/objects/MailchimpSyncStatus__c/fields/LastPushed__c.field-meta.xml
<CustomField>
    <fullName>LastPushed__c</fullName>
    <description>Date/time this contact was last pushed to Mailchimp.</description>
    <label>Last pushed to Mailchimp</label>
    <type>DateTime</type>
</CustomField>