force-app/main/default/objects/MailchimpSyncStatus__c/fields/NeedsSync__c.field-meta.xml
<CustomField>
    <fullName>NeedsSync__c</fullName>
    <description>Whether the record has been updated since it was last synced to Mailchimp.</description>
    <formula>ISBLANK(LastPushed__c) || Contact__r.LastModifiedDate - LastPushed__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs sync to Mailchimp?</label>
    <type>Checkbox</type>
</CustomField>